test :: 도메인 서비스와 엔티티 단위 테스트 확장